<resources>
    <string name="app_name" translatable="false">Bis Pause</string>
    <string name="picture_viewer">Latest picture in App Gallery</string>
    <string name="Qoutes" translatable="false">Qoutes</string>
    <string name="pause_picture">Picture of the word Pause</string>
    <string name="Marvel_Movie">latest Marvel Movie</string>
    <string name="Days_until">Days until latest Movie</string>
    <string name="Chuck_Norris" translatable="false">Chuck norris Quotes</string>
</resources>